Create home page view

--- a/TaskMenager/Views/Home/Index.cshtml
+++ b/TaskMenager/Views/Home/Index.cshtml
@@ -1,8 +1,18 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿
+<h1 class="onmiddle">Welcome</h1>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<hr />
+<div class="card onmiddle">
+    <div class="card-body">
+        <h4 class="card-title">How to begin ?</h4>
+        <h6 class="card-subtitle mb-2 text-muted">It's simple!</h6>
+        <p class="card-text">All what you need to do is click a link below and create your new task </p>
+        <p class="card-text">If you've already created task you can also check it below</p>
+        <a asp-controller="" class="card-link">Create new task</a>
+        <a asp-controller="" class="card-link">See my tasks </a>
+    </div>
+</div>  
+
+    
+ 
+
