--- a/TaskMenager/Views/Shared/_Layout.cshtml
+++ b/TaskMenager/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TaskMenager</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TaskMenager.styles.css" asp-append-version="true" />
@@ -36,9 +37,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted onmiddle">
         <div class="container">
-            &copy; 2023 - TaskMenager - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            TaskMenager <i class="bi bi-heart-fill"></i> for you 
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
