--- a/TaskMenager/Views/ActiveTasks/Index.cshtml
+++ b/TaskMenager/Views/ActiveTasks/Index.cshtml
@@ -2,12 +2,13 @@
 
 <h1>Your active task </h1>
 
-@foreach(var obj in Model)
+@foreach (var obj in Model.OrderBy(u => u.CreationTime))
 {
     <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
         <div class="card-header"></div>
         <div class="card-body">
             <h4 class="card-title">@obj.TaskTitle</h4>
+            <p>@obj.CreationTime</p>
             <p class="card-text">@obj.TaskDescription</p>
         </div>
     </div>
