--- a/TaskMenager/Views/ActiveTasks/Index.cshtml
+++ b/TaskMenager/Views/ActiveTasks/Index.cshtml
@@ -1,15 +1,26 @@
 ﻿@model List<TaskModel>
 
-<h1>Your active task </h1>
+<div class="container">
+    <h1 class="onmiddle">Your active tasks </h1>
+    <hr />
 
-@foreach (var obj in Model.OrderBy(u => u.CreationTime))
-{
-    <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
-        <div class="card-header"></div>
-        <div class="card-body">
-            <h4 class="card-title">@obj.TaskTitle</h4>
-            <p>@obj.CreationTime</p>
-            <p class="card-text">@obj.TaskDescription</p>
-        </div>
+    <div class="row">
+        @foreach (var obj in Model.OrderBy(u => u.CreationTime))
+        {
+            <div class="col-md-4">
+                <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
+                    <div class="card-header">@obj.TaskTitle</div>
+                    <div class="card-body">
+                        <h4 class="card-title onmiddle"></h4>
+                       <p class="card-text onmiddle">@obj.TaskDescription</p>
+                       <p class="SmallText">@obj.CreationTime</p>
+                        <a asp-controller="ActiveTask" asp-action="Delete" type="submit" class="btn btn-primary onmiddle">Done</a>
+                       
+                        
+                    </div>
+                </div>
+            </div>
+            
+        }
     </div>
-}
+</div>
