--- a/TaskMenager/Views/AddTask/Index.cshtml
+++ b/TaskMenager/Views/AddTask/Index.cshtml
@@ -15,6 +15,6 @@
         <input asp-for=TaskDescription type="text" class="form-control"  autocomplete="off">
     </div>
     <br />
-    <button asp-controller="AddTask" class="btn btn-primary" type="submit">Create New Task </button>
+    <button asp-controller="AddTask" asp-action="Create" class="btn btn-primary" type="submit">Create New Task </button>
 
 </form>
