--- a/TaskMenager/Views/Home/Index.cshtml
+++ b/TaskMenager/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         <h6 class="card-subtitle mb-2 text-muted">It's simple!</h6>
         <p class="card-text">All what you need to do is click a link below and create your new task </p>
         <p class="card-text">If you've already created task you can also check it below</p>
-        <a asp-controller="" class="card-link">Create new task</a>
+        <a asp-controller="AddTask" class="card-link">Create new task</a>
         <a asp-controller="ActiveTasks" class="card-link">See my tasks </a>
     </div>
 </div>  
