--- a/TaskMenager/Views/AddTask/Index.cshtml
+++ b/TaskMenager/Views/AddTask/Index.cshtml
@@ -20,3 +20,9 @@
     <button asp-controller="AddTask" asp-action="Create" class="btn btn-primary" type="submit"><i class="bi bi-plus-circle"></i> Create New Task </button>
 
 </form>
+
+@section Scripts {
+    @{
+        <partial name="_ValidationScriptsPartial"></partial>
+    }
+}
