add case if all task are finshed and fix layout page

--- a/TaskMenager/Views/Shared/_Layout.cshtml
+++ b/TaskMenager/Views/Shared/_Layout.cshtml
@@ -24,10 +24,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ActiveTasks" >Active Tasks</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ActiveTasks" asp-action="Index" >Active Tasks</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="AddTask">Add Task</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AddTask" asp-action="Index">Add Task</a>
                         </li>
                       
                     </ul>
