Write TaskNotFound view and Finish Task view

--- a/TaskMenager/Views/DeleteActiveTask/Index.cshtml
+++ b/TaskMenager/Views/DeleteActiveTask/Index.cshtml
@@ -1,3 +1,4 @@
-﻿<h1>Finished Succeed</h1>
+﻿
+<h1 class="onmiddle" >Finished Succeed</h1>
 <hr />
-<a asp-controller="Home" asp-action="Index"  class="btn btn-primary">Back to home page</a>
+<a asp-controller="Home" asp-action="Index" style="text-align:center"  class=" btn btn-primary ">Back to home page</a>
